# ScaleComm

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/spatialself_viewer/: README.md  app.py  requirements.txt
src/: __init__.py
src/spitialself/: __init__.py  evaluation.py  fdr.py  metrics.py  model_factory.py  models.py
